# graphql_api_tests

./: .gitignore  README.md  pyproject.toml  schema.graphql
src/clients/: graphql_client.py
src/data/: operations_contract.py
src/services/: schema_service.py
tests/: conftest.py  test_graphql_business_flows.py  test_graphql_contract.py  test_graphql_http.py  test_graphql_operations.py  test_graphql_validation.py
